bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
