allowed-namespaces-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowednamespaces
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedNamespaces
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowednamespaces

        violation[{"msg": msg}] {
          allowed := {"dev", "prod"}
          not input.review.object.metadata.namespace in allowed
          msg := sprintf("Namespace %v is not allowed", [input.review.object.metadata.namespace])
        }
