deny-latest-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyLatest
metadata:
  name: deny-latest
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
