nonroot-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredrunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredRunAsNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredrunasnonroot

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          sc := container.securityContext
          not sc.runAsNonRoot
          msg := sprintf("Container %v must set runAsNonRoot=true", [container.name])
        }
